init git ignore
init files

init files

clean

git commit -m "Apply .gitignore rules"

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,54 @@
+// filepath: c:\Users\arzhitni\source\repos\jenkins-demo-dotnet\.gitignore
+
+bin
+obj
+out
+
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+*.userprefs
+.vs/
+
+Debug/
+Release/
+x64/
+x86/
+ARM/
+ARM64/
+
+TestResults/
+*.trx
+*.coverage
+
+*.nupkg
+*.snupkg
+packages/
+.nuget/
+
+publish/
+*.pubxml
+*.PublishSettings
+
+*.log
+*.tmp
+*.temp
+
+*.mdf
+*.ldf
+*.ndf
+
+_ReSharper*/
+*.ReSharper
+*.DotSettings.user
+
+
+.idea/
+*.sln.iml
+
+
+.vscode/
+!.vscode/tasks.json
+!.vscode/launch.json
 /.vs
